chore: update test dependencies to latest versions (#129)